--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
     <script src="https://kit.fontawesome.com/693382bd32.js" crossorigin="anonymous"></script>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
      <header>
@@ -23,10 +26,10 @@
         </nav>
     </header>
     <section  id = "mainheader">
-    <h1>Hey Guys! I am Aadarsh.</h1>
+    <h1>Welcome to my Portfolio!</h1>
     <div class="headshot">
         <picture>
-            <img src="me.JPG" alt="headshot">
+            <img src="A (5).png" alt="headshot">
         </picture>
     </div>
 
@@ -51,7 +54,7 @@
                     <div class="img"><img src=
     "Recipe_icon.png" 
                                           alt="" draggable="false"> </div>
-                    <h2 style="color: green; font-weight:bold;">
+                    <h2 style="color: rgb(0, 0, 0); font-weight:bold;">
                           Recipe Finder
                       </h2>
                     <span>Python, Ollama</span>
@@ -60,7 +63,7 @@
                     <div class="img"><img src=
     "bill2.png" 
                                           alt="" draggable="false"> </div>
-                    <h2 style="color: green; font-weight:bold;">Bill Creator</h2>
+                    <h2 style="color: rgb(0, 0, 0); font-weight:bold;">Bill Creator</h2>
                     <span>Python, Excel</span>
                 </li>
                 <li class="card">
