--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aadarsh's Portfolio</title>
+    <link rel="icon" type="image/x-icon" href="A (5).png">
     <link rel="stylesheet" href="styles.css">
     <script src="https://kit.fontawesome.com/693382bd32.js" crossorigin="anonymous"></script>
 
